@@ -26,11 +26,16 @@
     <property name="heap.dir" location="/tmp/mcidasv-heapdump.hprof" />
 
     <!--
-      Controls Swing UI scaling. If you're using a HiDPI display,
-      try setting this value to 2. Note: this only applies to the
-      "jar.runlarge9" and "debug.runlarge9" targets (they use Java 9).
+      Set the "uiscale" property to control Swing UI scaling.
+
+      If you're using a HiDPI display (or everything in McV just looks super tiny),
+      try setting this value to 2.
+
+      Note: this only applies to the "jar.runlarge.jpms" and "debug.runlarge.jpms" targets
+      (they use Java 9+).
+
+      <property name="uiscale" value="1" />
     -->
-    <property name="uiscale" value="1" />
 
     <!--
       Used to control the "mcidasv.darkmode" property via the Ant commandline (like uiscale).
@@ -213,25 +218,26 @@
     
     <!-- Use these properties to make changing the versions of related JARs
         (see SLF4J or Logback) a bit less tedious. -->
-    <property name="slf4j.version" value="2.0.0" />
+    <property name="slf4j.version" value="2.0.9" />
     <property name="logback.version" value="1.3.0" />
     <property name="miglayout.version" value="5.2" />
     <property name="jogamp.version" value="2.5.0" />
     <property name="swingx.version" value="1.6.5-1" />
     <property name="eventbus.version" value="1.4" />
     <property name="commons-math.version" value="3.6.1" />
-    <property name="rsyntaxtextarea.version" value="3.1.1" />
+    <property name="rsyntaxtextarea.version" value="3.3.4" />
     <property name="sysout.version" value="1.0.2" />
-    <property name="jython.version" value="2.7.2" />
-    <property name="juniversalchardet.version" value="2.3.0" />
-    <property name="jsattrack.version" value="4.2.2" />
+    <property name="jython.version" value="2.7.3" />
+    <property name="juniversalchardet.version" value="2.4.0" />
+    <property name="jsattrack.version" value="4.2.3" />
     <property name="commons-httpclient.version" value="3.1" />
     <property name="jcodec.version" value="0.2.6-SNAPSHOT" />
     <property name="idv.version" value="5.7" />
     <property name="ncidv.version" value="4.6.15-SNAPSHOT" />
     <property name="visad.version" value="2.0-SNAPSHOT" />
-    <property name="flatlaf.version" value="3.0" />
-    <property name="batik.version" value="1.16" />
+    <property name="flatlaf.version" value="3.2.5" />
+    <property name="batik.version" value="1.17" />
+    <property name="fop-xmlgraphics.version" value="2.9" />
 
 <!--    <property name="jansi.version" value="2.4.0" />-->
 
@@ -243,8 +249,8 @@
     <!-- The CLASSPATH specified within McV's manifest 
          Note: if you're going to modify this property, be sure to make similar
          modifications to the "mcv.libs" fileset. -->
-<!--    <property name="jar.base.classpath" value="jansi-${jansi.version}.jar ${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname}commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-2.7.jar rhino-1.7.7.jar serializer-2.7.2.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-2.7.jar orange-extensions-1.1-SNAPSHOT.jar" />-->
-    <property name="jar.base.classpath" value="${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname}commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-2.7.jar rhino-1.7.7.jar serializer-2.7.2.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-2.7.jar" />
+<!--    <property name="jar.base.classpath" value="jansi-${jansi.version}.jar ${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname} commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-${fop-xmlgraphics.version}.jar rhino-1.7.14.jar serializer-2.7.3.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-${fop-xmlgraphics.version}.jar" />-->
+    <property name="jar.base.classpath" value="${userguide.jarname} ncIdv-${ncidv.version}.jar external-trimmed-${idv.version}.jar jogamp-all-${jogamp.version}.jar sysout-over-slf4j-${sysout.version}.jar miglayout-core-${miglayout.version}.jar miglayout-swing-${miglayout.version}.jar eventbus-${eventbus.version}.jar logback-core-${logback.version}.jar logback-classic-${logback.version}.jar log4j-over-slf4j-${slf4j.version}.jar slf4j-api-${slf4j.version}.jar ${local-idv.jarname} commons-math3-${commons-math.version}.jar rsyntaxtextarea-${rsyntaxtextarea.version}.jar jul-to-slf4j-${slf4j.version}.jar local-visad-${idv.version}.jar visad-${visad.version}.jar idv-${idv.version}.jar ${userguide.jarname} JSatTrak-${jsattrack.version}.jar swingx-common-${swingx.version}.jar j3dcore-${java3d.version}.jar j3dutils-${java3d.version}.jar vecmath-${java3d.version}.jar jython-standalone-${jython.version}.jar juniversalchardet-${juniversalchardet.version}.jar commons-httpclient-${commons-httpclient.version}.jar jcodec-javase-${jcodec.version}.jar jcodec-${jcodec.version}.jar flatlaf-${flatlaf.version}.jar flatlaf-extras-${flatlaf.version}.jar flatlaf-intellij-themes-${flatlaf.version}.jar flatlaf-swingx-${flatlaf.version}.jar batik-all-${batik.version}.jar batik-anim-${batik.version}.jar batik-awt-util-${batik.version}.jar batik-bridge-${batik.version}.jar batik-codec-${batik.version}.jar batik-constants-${batik.version}.jar batik-css-${batik.version}.jar batik-dom-${batik.version}.jar batik-ext-${batik.version}.jar batik-extension-${batik.version}.jar batik-gui-util-${batik.version}.jar batik-gvt-${batik.version}.jar batik-i18n-${batik.version}.jar batik-parser-${batik.version}.jar batik-script-${batik.version}.jar batik-shared-resources-${batik.version}.jar batik-svg-dom-${batik.version}.jar batik-svgbrowser-${batik.version}.jar batik-svggen-${batik.version}.jar batik-svgrasterizer-${batik.version}.jar batik-swing-${batik.version}.jar batik-test-${batik.version}.jar batik-test-old-${batik.version}.jar batik-test-svg-${batik.version}.jar batik-test-swing-${batik.version}.jar batik-transcoder-${batik.version}.jar batik-util-${batik.version}-tests.jar batik-util-${batik.version}.jar batik-xml-${batik.version}.jar external-trimmed-5.7.jar fop-transcoder-allinone-${fop-xmlgraphics.version}.jar rhino-1.7.14.jar serializer-2.7.3.jar xml-apis-1.4.01.jar xml-apis-ext-1.3.04.jar xmlgraphics-commons-${fop-xmlgraphics.version}.jar" />
 
     <!-- List of McIDAS-V JAR files. 
          Note: if you're going to modify this fileset, be sure to make similar
@@ -287,12 +293,12 @@
         <include name="batik-util-${batik.version}-tests.jar" />
         <include name="batik-util-${batik.version}.jar" />
         <include name="batik-xml-${batik.version}.jar" />
-        <include name="fop-transcoder-allinone-2.7.jar" />
-        <include name="rhino-1.7.7.jar" />
-        <include name="serializer-2.7.2.jar" />
+        <include name="fop-transcoder-allinone-${fop-xmlgraphics.version}.jar" />
+        <include name="rhino-1.7.14.jar" />
+        <include name="serializer-2.7.3.jar" />
         <include name="xml-apis-1.4.01.jar" />
         <include name="xml-apis-ext-1.3.04.jar" />
-        <include name="xmlgraphics-commons-2.7.jar" />
+        <include name="xmlgraphics-commons-${fop-xmlgraphics.version}.jar" />
         <include name="jcodec-${jcodec.version}.jar" />
         <include name="jcodec-javase-${jcodec.version}.jar" />
         <include name="commons-httpclient-${commons-httpclient.version}.jar" />
@@ -954,6 +960,8 @@
       <jvmarg value="--add-opens" />
       <jvmarg value="java.desktop/javax.swing=ALL-UNNAMED" />
       <jvmarg value="--add-opens" />
+      <jvmarg value="java.desktop/javax.swing.plaf=ALL-UNNAMED" />
+      <jvmarg value="--add-opens" />
       <jvmarg value="java.desktop/javax.swing.plaf.basic=ALL-UNNAMED" />
       <jvmarg value="--add-opens" />
       <jvmarg value="java.desktop/javax.accessibility=ALL-UNNAMED" />
@@ -971,8 +979,9 @@
       <jvmarg value="-XX:+HeapDumpOnOutOfMemoryError" />
       <jvmarg value="-XX:HeapDumpPath=${heap.dir}" />
       <jvmarg value="-Xdock:icon=../release/icons/mcidasv.icns" if:set="build.macos" />
-
-      <sysproperty key="sun.java2d.uiScale" value="${uiscale}" />
+      <sysproperty key="apple.awt.application.appearance" value="system" />
+      <sysproperty key="sun.java2d.metal" value="true" />
+      <sysproperty key="sun.java2d.uiScale" value="${uiscale}" if:set="uiscale"/>
       <sysproperty key="loglevel" value="${run.log.level}" />
       <sysproperty key="mcv.userpath" value="${userpath.dir}" />
       <sysproperty key="mcv.logpath" value="${userpath.dir}/mcidasv.log" />
